GNOME Bugzilla – Bug 702090
Publicly export seed_exception_get_stack
Last modified: 2013-06-13 08:45:21 UTC
It is documented as a public function and exposed in the ABI, but not exported in the public headers.
Created attachment 246641 [details] [review] Publicly export seed_exception_get_stack
The patch looks good to me.
thanks - committed