Publicly export seed_exception_get_stack

It is documented as a public function and exposed in the ABI,
but not exported in the public headers.

https://bugzilla.gnome.org/show_bug.cgi?id=702090